* Add set_number batch to let invoice.post be out scalable
* Allow other uses for remainder when reconciling
* Allow to configure premium with tax included

Version 1.4 - 2015-05-29
* Invoice premiums with at_contract_signature frequency at contract activation
* Manage invoicing of non periodic frequencies
* Add a wizard to change contract bank account
* Add rating webservice
* Add invoice dates to description for contract insurance invoices
* Display invoices in list view in different colors according to state

Version 1.3 - 2015-01-22
* Add invoice line details

Version 1.2 - 2014-07-01
* Changelog file creation